fixReport